5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1795_3137.log
== TEST (2019-05-30 16:22:55) 
-- CODE:
 
from numpy import*
v= array(eval(input("")))
m = log((exp(v))/exp(size(v)))
print(round(v,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:15) 
-- CODE:
 
from numpy import*
v= array(eval(input("Vetor: ")))
m = log((exp(v))/exp(size(v)))
print(round(v,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
 
from numpy import*
v = array(eval(input("Vetor: ")))
m = log((exp(v))/exp(size(v)))
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
 
from numpy import*
v = array(eval(input("Vetor: ")))
m = log((exp(v))/exp(size(v)))
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
 
from numpy import*
v = array(eval(input("Vetor: ")))
m = log((exp(v))/exp(size(v)))
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:46) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = log((exp(sum(v))/exp(size(v)))
print(round(m,2))

-- ERROR:
File "XXXX", line 4
    print(round(m,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:15) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = log((exp(sum(v))/exp(size(v)))
print(round(m,2))

-- ERROR:
File "XXXX", line 4
    print(round(m,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
